--- a/Whiteboard/Info.plist
+++ b/Whiteboard/Info.plist
@@ -37,5 +37,32 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    
+    <!--  增加的Key Value  -->
+    <key>CFBundleDevelopmentRegion</key>
+    <string>zh_CN</string>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
+    <key>NSCameraUsageDescription</key>
+    <string>应用需要您开启此权限</string>
+    <key>NSContactsUsageDescription</key>
+    <string>应用需要您开启此权限</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>应用需要您开启此权限</string>
+    <key>NSLocationUsageDescription</key>
+    <string>应用需要您开启此权限</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>应用需要您开启此权限</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>应用需要您开启此权限</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>应用需要您开启此权限</string>
+    
+    <!--    状态栏颜色-->
+    <!--    <key>UIStatusBarStyle</key>-->
+    <!--    <string>UIStatusBarStyleLightContent</string>-->
 </dict>
 </plist>
